# applied_time_series_and_machine_learning

./: .gitignore  README.md  anova.ipynb  applicationsOfTsaWithExs.ipynb  dataCharacteristics.ipynb  main.py  one_way_anova-checkpoint.ipynb  overview.ipynb  overview_of_time_series.ipynb  pyproject.toml  replaceVariables.ipynb  terminology.ipynb  time_series_examples.ipynb
framework_for_time_series_data/: constants.py  data_loader.py  pyproject.toml  real_world_investigations-airline.ipynb  real_world_investigations-base.ipynb  real_world_investigations-misc-random_walk_ts.ipynb  real_world_investigations-stock-microsoft-hourly-raw-data.ipynb  real_world_investigations-stock-tencent-full.ipynb  real_world_investigations-stock-tencent-raw-data.ipynb  real_world_investigations-stock-tencent.ipynb  real_world_investigations-temperature.ipynb  time_series.py  ts_models.py
framework_for_time_series_data/.ipynb_checkpoints/: real_world_investigations-airline-checkpoint.ipynb  real_world_investigations-base-checkpoint.ipynb  real_world_investigations-misc-checkpoint.ipynb  real_world_investigations-misc-random_walk_ts-checkpoint.ipynb  real_world_investigations-specific-stock--checkpoint.ipynb  real_world_investigations-stock-checkpoint.ipynb  real_world_investigations-stock-microsoft-hourly-raw-data-checkpoint.ipynb  real_world_investigations-stock-microsoft-hourly-returns-data-checkpoint.ipynb  real_world_investigations-stock-tencent-checkpoint.ipynb  real_world_investigations-stock-tencent-full-checkpoint.ipynb  real_world_investigations-temperature-Copy1-checkpoint.ipynb  (+3 more)
(+222 files in other folders)
