# framework_for_time_series_data/pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tslearn"
version = "0.1.0"
description = "A custom framework for time series analysis and forecasting."
dependencies = [
    "pandas",
    "yfinance",
    "matplotlib",
    "statsmodels",
    "django>=5.2.4",
    "dotenv>=0.9.9",
    "groq>=0.26.0",
    "ipdb>=0.13.13",
    "openai>=1.83.0",
    "transformers>=4.52.4",
    "torch",
    "scikit-learn",
]

# Look for tslearn specifically
[tool.setuptools.packages.find]
where = ["."]  # Look in the current directory
include = ["tslearn*"] # Only include packages that start with 'tslearn'